# data-juicer

./: .gitignore  README.md  pyproject.toml
notebook/format_convert/: sft_to_pt.py
notebook/ifd/: ifd.ipynb  ifd.ju.py  ifd.py
notebook/preprocess/: tulu-sft.ipynb
notebook/preprocess/General/: InfinityInstruct.ipynb  tulu-sft.ipynb
script/: get_dataset.sh
src/: config.py  ifd.py  perplexity.py
src/config/: model_config.py  prompt.py
src/utils/: conv_formatters.py  file_io.py  format_convert.py  metadata_processor.py  util.py
