[tool.poetry]
name = "data-juicer"
version = "0.1.0"
description = ""
authors = ["kyriekevin <zyzkyrie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
huggingface-hub = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
