[tool.poetry]
name = "llm-data-recipe"
version = "0.1.0"
description = ""
authors = ["kyriekevin <zyzkyrie@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
huggingface-hub = "^0.26.2"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
ipykernel = "^6.29.5"
torch = "^2.5.1"
transformers = "^4.47.0"
protobuf = "^5.29.1"
openai = "^1.58.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"
nbclassic = "^1.1.0"
jupyter-console = "^6.6.3"
jupynium = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
